1-cluster-scoped/cattle-system/overlays/oracle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  labels:
    app.kubernetes.io/name: argocd
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - rancher.acemaster.shop
      secretName: acemaster-shop-tls
  rules:
    - host: rancher.acemaster.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 443
